--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
 #Mon Oct 17 19:38:47 EDT 2011
 app.grails.version=1.3.7
-app.name=openmentor-webpei
+app.name=openmentor-web
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
