--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,16 @@
 #Grails Metadata file
-#Thu Mar 08 12:02:03 GMT 2012
+#Wed Mar 28 16:46:34 BST 2012
 app.grails.version=2.0.1
 app.name=openmentor-web
 app.servlet.version=2.4
 app.version=0.1
+plugins.famfamfam=1.0.1
+plugins.greenmail=1.3.2
 plugins.hibernate=2.0.1
+plugins.jquery=1.7.1
+plugins.jquery-ui=1.8.15
+plugins.mail=1.0
 plugins.spring-security-core=1.2.1
 plugins.spring-security-ldap=1.0.5
+plugins.spring-security-ui=0.2
 plugins.tomcat=2.0.1
